--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -74,3 +74,17 @@ ul{
     width: 50%;
     float: left;
   }
+
+  /* Mancala board design*/
+  
+  
+  .mancalaBoard {
+   display: flex;
+    width: 80%;
+    height: 450px;
+    background-color: #AD7A2E;
+    border-radius: 40px;
+    justify-content: center;
+    margin-left: auto;
+  margin-right: auto;
+  }
