--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -79,12 +79,23 @@ ul{
   
   
   .mancalaBoard {
-   display: flex;
+    display: flex;
     width: 80%;
     height: 450px;
     background-color: #AD7A2E;
     border-radius: 40px;
     justify-content: center;
     margin-left: auto;
-  margin-right: auto;
+    margin-right: auto;
   }
+
+  div {
+        width: 100px;
+        height: 100px;
+        background: #DBAA5F;
+        border-radius: 50%;
+        overflow: hidden;
+      }
+        
+
+    
