--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -110,7 +110,8 @@ ul{
         padding: 30px;
         margin-left: auto;
         margin-right: auto;
-        margin-bottom: auto;
+        margin-top: 60px;
+       
   }
         
    .centeredRows {
@@ -158,17 +159,18 @@ ul{
 
 .infobar {
         width: 700px;
-        height: 80px;
+        height: 60px;
         background: #008037;
         color: #DAEDE2;
         position: absolute;
-        bottom: 100px;
-        padding: 20px;
+        padding: 15px;
         border-radius: 30px;
         text-align: center;
         font-family:Verdana, Geneva, Tahoma, sans-serif;
         font-size: 19px;
-
+        bottom: 10%;
+        transform: translate(30%, -15%);
+        
       }
 
    .footer {
