--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -135,7 +135,7 @@ ul{
         flex-grow:1;
    }
 
-   .hole {
+    .hole1, .hole2 {
         display: flex;
         position:relative;
         background-color:#DBAA5F;
